# pywiki

./: README.md  pyproject.toml
pywiki/models/: article.py
pywiki/tui/: app.py
