[tool.poetry]
name = "pywiki"
version = "0.1.0"
description = ""
authors = ["sempervent <jngrant9+git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.85.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

